# nsu-cse299

./: .gitignore  README.md
support/backend/: .env  pyproject.toml  requirements.txt
support/backend/app/: main.py
support/backend/app/api/: deps.py
support/backend/app/api/routes/: auth.py  history.py  movies.py
support/backend/app/core/: config.py  security.py
support/backend/app/db/: session.py
support/backend/app/models/: genre.py  movie.py  movie_genre.py  subtitle.py  user.py  watch_history.py
support/backend/app/schemas/: history.py  movie.py  user.py
support/backend/app/services/: recommendations.py
support/backend/netflix_clone_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
support/frontend/: package-lock.json  package.json  tailwind.config.ts
support/frontend/app/: globals.css  layout.tsx  page.tsx
support/frontend/app/history/: page.tsx
support/frontend/app/login/: page.tsx
support/frontend/app/movies/[id]/: page.tsx
support/frontend/app/register/: page.tsx
support/frontend/app/search/: page.tsx
support/frontend/components/: MovieCard.tsx  Player.tsx  Row.tsx
support/frontend/lib/: api.ts
