[project]
name = "netflix-clone-backend"
version = "0.1.0"
description = "FastAPI backend for a Netflix-style streaming app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "asyncpg>=0.29",
  "pydantic>=2.6",
  "email-validator>=2.1",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "alembic>=1.13",
  "httpx>=0.27",
  "certifi>=2024.7.4",
]

[tool.uvicorn]
app = "app.main:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["media*"]
